--- a/templates/index.html
+++ b/templates/index.html
@@ -310,7 +310,7 @@
                 <!-- Large header banner -->
                 <div class="container">
                     <img src="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack.png" srcset="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack.png 1x, https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack@2x.png 2x">
-                    <h1 class="display-1 text-bold">Build anything</h1>
+                    <h1 class="display-1 text-bold">{{title}}</h1>
                     <h5 class="text-gray-soft text-regular">Themes built by or reviewed by Bootstrap's creators.</h5>
                     <a class="button button-brand btn-lg mb-5 mb-lg-2" href="https://themes.getbootstrap.com/official-themes">Why our themes?</a>
                 </div>
