--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
-        <title>Themebook Built &amp;Curated by the Bootstrap Team.</title>
+        <title>Onelink Built &amp;Curated by the Bootstrap Team.</title>
         <link rel="profile" href="https://gmpg.org/xfn/11"/>
         <link rel="pingback" href="https://themes.getbootstrap.com/xmlrpc.php"/>
         <link rel='apple-touch-icon' sizes='180x180' href='https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/fav/apple-touch-icon.png'>
@@ -14,18 +14,18 @@
         <link rel='shortcut icon' href='https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/fav/favicon.ico'>
         <meta name='msapplication-config' content='https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/fav/browserconfig.xml'>
         <!-- This site is optimized with the Yoast SEO plugin v12.7.1 - https://yoast.com/wordpress/plugins/seo/ -->
-        <meta name="description" content="Themebook is a collection of the best templates and themes curated by Bootstrap’s creators. Our collection of templates include themes to build an admin, dashboard, landing page, e-commerce site, application, and more."/>
+        <meta name="description" content="Onelink is a collection of the best templates and themes curated by Bootstrap’s creators. Our collection of templates include themes to build an admin, dashboard, landing page, e-commerce site, application, and more."/>
         <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
         <link rel="canonical" href="https://themes.getbootstrap.com/"/>
         <meta property="og:locale" content="en_US"/>
         <meta property="og:type" content="website"/>
-        <meta property="og:title" content="Themebook Built &amp; Curated by the Bootstrap Team."/>
-        <meta property="og:description" content="Themebook is a collection of the best templates and themes curated by Bootstrap’s creators. Our collection of templates include themes to build an admin, dashboard, landing page, e-commerce site, application, and more."/>
+        <meta property="og:title" content="Onelink Built &amp; Curated by the Bootstrap Team."/>
+        <meta property="og:description" content="Onelink is a collection of the best templates and themes curated by Bootstrap’s creators. Our collection of templates include themes to build an admin, dashboard, landing page, e-commerce site, application, and more."/>
         <meta property="og:url" content="https://themes.getbootstrap.com/"/>
-        <meta property="og:site_name" content="Themebook"/>
+        <meta property="og:site_name" content="Onelink"/>
         <meta name="twitter:card" content="summary_large_image"/>
-        <meta name="twitter:description" content="Themebook is a collection of the best templates and themes curated by Bootstrap’s creators. Our collection of templates include themes to build an admin, dashboard, landing page, e-commerce site, application, and more."/>
-        <meta name="twitter:title" content="Themebook Built &amp; Curated by the Bootstrap Team."/>
+        <meta name="twitter:description" content="Onelink is a collection of the best templates and themes curated by Bootstrap’s creators. Our collection of templates include themes to build an admin, dashboard, landing page, e-commerce site, application, and more."/>
+        <meta name="twitter:title" content="Onelink Built &amp; Curated by the Bootstrap Team."/>
         <script type='application/ld+json' class='yoast-schema-graph yoast-schema-graph--main'>
             {
                 "@context": "https://schema.org",
@@ -34,7 +34,7 @@
                         "@type": "WebSite",
                         "@id": "https://themes.getbootstrap.com/#website",
                         "url": "https://themes.getbootstrap.com/",
-                        "name": "Themebook",
+                        "name": "Onelink",
                         "description": "Built and Curated by the Bootstrap Team",
                         "potentialAction": {
                             "@type": "SearchAction",
@@ -47,18 +47,18 @@
                         "@id": "https://themes.getbootstrap.com/#webpage",
                         "url": "https://themes.getbootstrap.com/",
                         "inLanguage": "en-US",
-                        "name": "Themebook Built &amp; Curated by the Bootstrap Team.",
+                        "name": "Onelink Built &amp; Curated by the Bootstrap Team.",
                         "isPartOf": {
                             "@id": "https://themes.getbootstrap.com/#website"
                         },
-                        "description": "Themebook is a collection of the best templates and themes curated by Bootstrap\u2019s creators. Our collection of templates include themes to build an admin, dashboard, landing page, e-commerce site, application, and more."
+                        "description": "Onelink is a collection of the best templates and themes curated by Bootstrap\u2019s creators. Our collection of templates include themes to build an admin, dashboard, landing page, e-commerce site, application, and more."
                     }
                 ]
             }</script>
         <!-- / Yoast SEO plugin. -->
         <link rel='dns-prefetch' href='//s.w.org'/>
-        <link rel="alternate" type="application/rss+xml" title="Themebook &raquo; Feed" href="https://themes.getbootstrap.com/feed/"/>
-        <link rel="alternate" type="application/rss+xml" title="Themebook &raquo; Comments Feed" href="https://themes.getbootstrap.com/comments/feed/"/>
+        <link rel="alternate" type="application/rss+xml" title="Onelink &raquo; Feed" href="https://themes.getbootstrap.com/feed/"/>
+        <link rel="alternate" type="application/rss+xml" title="Onelink &raquo; Comments Feed" href="https://themes.getbootstrap.com/comments/feed/"/>
         <script type="text/javascript">
             window._wpemojiSettings = {
                 "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/72x72\/",
@@ -240,7 +240,7 @@
         <!-- <div id="page" class="hfeed site"> -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a href="https://themes.getbootstrap.com" class="navbar-brand" href="/">Themebook</a>
+                <a href="https://themes.getbootstrap.com" class="navbar-brand" href="/">Onelink</a>
                 <div class="d-flex ml-auto">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#globalNavbar" aria-controls="globalNavbar" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
