--- a/templates/home.html
+++ b/templates/home.html
@@ -287,20 +287,16 @@
                     </ul>
                     <ul class="navbar-nav d-none d-lg-flex ml-2 order-3">
                         <li class="nav-item">
-                            <a class="nav-link" href="https://themes.getbootstrap.com/signin/">Sign in</a>
+                            <a class="nav-link" href="add">Add Your Link</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://themes.getbootstrap.com/my-account/">Sign up</a>
-                        </li>
+
                     </ul>
                     <ul class="navbar-nav d-lg-none">
                         <li class="nav-item-divider"></li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://themes.getbootstrap.com/signin/">Sign in</a>
+                            <a class="nav-link" href="add">Add Your Link</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://themes.getbootstrap.com/my-account/">Sign up</a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -309,7 +305,7 @@
             <section class="hero">
                 <!-- Large header banner -->
                 <div class="container">
-                    <img src="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack.png" srcset="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack.png 1x, https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack@2x.png 2x">
+                    <img src="/public/images/bootstrap-stack.webp" >
                     <h1 class="display-1 text-bold">{{title}}</h1>
                     <h5 class="text-gray-soft text-regular">Themes built by or reviewed by Bootstrap's creators.</h5>
                     <a class="button button-brand btn-lg mb-5 mb-lg-2" href="https://themes.getbootstrap.com/official-themes">Why our themes?</a>
