--- a/templates/home.html
+++ b/templates/home.html
@@ -238,69 +238,8 @@
     </head>
     <body class="home blog woocommerce theme-dokan woocommerce-no-js dokan-theme-dokan">
         <!-- <div id="page" class="hfeed site"> -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
-                <a href="https://themes.getbootstrap.com" class="navbar-brand" href="/">Onelink</a>
-                <div class="d-flex ml-auto">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#globalNavbar" aria-controls="globalNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse" id="globalNavbar">
-                    <form class="form-inline form-navbar my-2 my-lg-0 order-2" action="https://themes.getbootstrap.com/shop/">
-                        <input class="form-control" name="s" type="text" placeholder="Search"/>
-                    </form>
-                    <ul class="navbar-nav mr-auto order-1">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <div class="navbar-collapse navbar-top-collapse">
-                                    <ul id="menu-top-menu" class="nav navbar-nav">
-                                        <li id="menu-item-601" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-601">
-                                            <a title="Admin &amp; Dashboard" href="https://themes.getbootstrap.com/product-category/admin-dashboard/">Admin &#038;Dashboard</a>
-                                        </li>
-                                        <li id="menu-item-603" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-603">
-                                            <a title="Landing &amp; Corporate" href="https://themes.getbootstrap.com/product-category/landing-corporate/">Landing &#038;Corporate</a>
-                                        </li>
-                                        <li id="menu-item-1537" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-1537">
-                                            <a title="Application" href="https://themes.getbootstrap.com/product-category/application/">Application</a>
-                                        </li>
-                                        <li id="menu-item-602" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-602">
-                                            <a title="E-Commerce &amp; Retail" href="https://themes.getbootstrap.com/product-category/ecommerce-retail/">E-Commerce &#038;Retail</a>
-                                        </li>
-                                        <li id="menu-item-1538" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-1538">
-                                            <a title="Portfolio &amp; Blog" href="https://themes.getbootstrap.com/product-category/portfolio-blog/">Portfolio &#038;Blog</a>
-                                        </li>
-                                        <li id="menu-item-1539" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-1539">
-                                            <a title="Specialty" href="https://themes.getbootstrap.com/product-category/specialty/">Specialty</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://themes.getbootstrap.com/official-themes">Why Our Themes?</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://themes.getbootstrap.com/guide">The Guide</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav d-none d-lg-flex ml-2 order-3">
-                        <li class="nav-item">
-                            <a class="nav-link" href="add">Add Your Link</a>
-                        </li>
-
-                    </ul>
-                    <ul class="navbar-nav d-lg-none">
-                        <li class="nav-item-divider"></li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="add">Add Your Link</a>
-                        </li>
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        
+            {%include "includes/header.html" %}
         <main id="main" class="site-main main">
             <section class="hero">
                 <!-- Large header banner -->
