some more changes

--- a/templates/product.html
+++ b/templates/product.html
@@ -654,8 +654,7 @@
                                             <div class="theme-description__list__item"><span
                                                     class="theme-description__item__title">Category</span>
                                                 <a
-                                                    href="https://themes.getbootstrap.com/product-category/ecommerce-retail/">E-Commerce
-                                                    &amp; Retail</a>
+                                                    href="/{{data['category']}}"> {{data['category']}} </a>
                                             </div>
                                             <div class="theme-description__list__item align-items-center"><span
                                                     class="theme-description__item__title">Questions?</span><a
