--- a/templates/product.html
+++ b/templates/product.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
-  <title>FreshCart – Nextjs eCommerce Website Template - Themebook</title>
+  <title>FreshCart – Nextjs eCommerce Website Template - onelink</title>
   <link rel="profile" href="https://gmpg.org/xfn/11" />
   <link rel="pingback" href="https://themes.getbootstrap.com/xmlrpc.php" />
 
@@ -21,24 +21,24 @@
 <link rel="canonical" href="https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="FreshCart – Nextjs eCommerce Website Template - Themebook" />
+<meta property="og:title" content="FreshCart – Nextjs eCommerce Website Template - onelink" />
 <meta property="og:description" content="Next.js eCommerce website template is designed for grocery stores and online marketplaces. It&#8217;s time to take your online shopping platform to the next level with our FreshCart. By leveraging the powerful framework of Next.js, Freshcart ensures a seamless user experience with fast load times, server-side rendering, and automatic code splitting, making it an ideal solution &hellip;" />
 <meta property="og:url" content="https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/" />
-<meta property="og:site_name" content="Themebook" />
+<meta property="og:site_name" content="onelink" />
 <meta property="og:image" content="https://themes.getbootstrap.com/wp-content/uploads/2024/09/Nextjs-eCommerce-Website-Template-min.jpg" />
 <meta property="og:image:secure_url" content="https://themes.getbootstrap.com/wp-content/uploads/2024/09/Nextjs-eCommerce-Website-Template-min.jpg" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="900" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Next.js eCommerce website template is designed for grocery stores and online marketplaces. It&#8217;s time to take your online shopping platform to the next level with our FreshCart. By leveraging the powerful framework of Next.js, Freshcart ensures a seamless user experience with fast load times, server-side rendering, and automatic code splitting, making it an ideal solution [&hellip;]" />
-<meta name="twitter:title" content="FreshCart – Nextjs eCommerce Website Template - Themebook" />
+<meta name="twitter:title" content="FreshCart – Nextjs eCommerce Website Template - onelink" />
 <meta name="twitter:image" content="https://themes.getbootstrap.com/wp-content/uploads/2024/09/Nextjs-eCommerce-Website-Template-min.jpg" />
-<script type='application/ld+json' class='yoast-schema-graph yoast-schema-graph--main'>{"@context":"https://schema.org","@graph":[{"@type":"WebSite","@id":"https://themes.getbootstrap.com/#website","url":"https://themes.getbootstrap.com/","name":"Themebook","description":"Built and Curated by the Bootstrap Team","potentialAction":{"@type":"SearchAction","target":"https://themes.getbootstrap.com/?s={search_term_string}","query-input":"required name=search_term_string"}},{"@type":"ImageObject","@id":"https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/#primaryimage","url":"https://themes.getbootstrap.com/wp-content/uploads/2024/09/Nextjs-eCommerce-Website-Template-min.jpg","width":1200,"height":900},{"@type":"WebPage","@id":"https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/#webpage","url":"https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/","inLanguage":"en-US","name":"FreshCart \u2013 Nextjs eCommerce Website Template - Themebook","isPartOf":{"@id":"https://themes.getbootstrap.com/#website"},"primaryImageOfPage":{"@id":"https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/#primaryimage"},"datePublished":"2024-10-10T07:14:28+00:00","dateModified":"2024-10-10T07:15:21+00:00"}]}</script>
+<script type='application/ld+json' class='yoast-schema-graph yoast-schema-graph--main'>{"@context":"https://schema.org","@graph":[{"@type":"WebSite","@id":"https://themes.getbootstrap.com/#website","url":"https://themes.getbootstrap.com/","name":"onelink","description":"Built and Curated by the Bootstrap Team","potentialAction":{"@type":"SearchAction","target":"https://themes.getbootstrap.com/?s={search_term_string}","query-input":"required name=search_term_string"}},{"@type":"ImageObject","@id":"https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/#primaryimage","url":"https://themes.getbootstrap.com/wp-content/uploads/2024/09/Nextjs-eCommerce-Website-Template-min.jpg","width":1200,"height":900},{"@type":"WebPage","@id":"https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/#webpage","url":"https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/","inLanguage":"en-US","name":"FreshCart \u2013 Nextjs eCommerce Website Template - onelink","isPartOf":{"@id":"https://themes.getbootstrap.com/#website"},"primaryImageOfPage":{"@id":"https://themes.getbootstrap.com/product/freshcart-nextjs-ecommerce-website-template/#primaryimage"},"datePublished":"2024-10-10T07:14:28+00:00","dateModified":"2024-10-10T07:15:21+00:00"}]}</script>
 <!-- / Yoast SEO plugin. -->
 
 <link rel='dns-prefetch' href='//s.w.org' />
-<link rel="alternate" type="application/rss+xml" title="Themebook &raquo; Feed" href="https://themes.getbootstrap.com/feed/" />
-<link rel="alternate" type="application/rss+xml" title="Themebook &raquo; Comments Feed" href="https://themes.getbootstrap.com/comments/feed/" />
+<link rel="alternate" type="application/rss+xml" title="onelink &raquo; Feed" href="https://themes.getbootstrap.com/feed/" />
+<link rel="alternate" type="application/rss+xml" title="onelink &raquo; Comments Feed" href="https://themes.getbootstrap.com/comments/feed/" />
 		<script type="text/javascript">
 			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/themes.getbootstrap.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=5.3"}};
 			!function(e,a,t){var r,n,o,i,p=a.createElement("canvas"),s=p.getContext&&p.getContext("2d");function c(e,t){var a=String.fromCharCode;s.clearRect(0,0,p.width,p.height),s.fillText(a.apply(this,e),0,0);var r=p.toDataURL();return s.clearRect(0,0,p.width,p.height),s.fillText(a.apply(this,t),0,0),r===p.toDataURL()}function l(e){if(!s||!s.fillText)return!1;switch(s.textBaseline="top",s.font="600 32px Arial",e){case"flag":return!c([127987,65039,8205,9895,65039],[127987,65039,8203,9895,65039])&&(!c([55356,56826,55356,56819],[55356,56826,8203,55356,56819])&&!c([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]));case"emoji":return!c([55357,56424,55356,57342,8205,55358,56605,8205,55357,56424,55356,57340],[55357,56424,55356,57342,8203,55358,56605,8203,55357,56424,55356,57340])}return!1}function d(e){var t=a.createElement("script");t.src=e,t.defer=t.type="text/javascript",a.getElementsByTagName("head")[0].appendChild(t)}for(i=Array("flag","emoji"),t.supports={everything:!0,everythingExceptFlag:!0},o=0;o<i.length;o++)t.supports[i[o]]=l(i[o]),t.supports.everything=t.supports.everything&&t.supports[i[o]],"flag"!==i[o]&&(t.supports.everythingExceptFlag=t.supports.everythingExceptFlag&&t.supports[i[o]]);t.supports.everythingExceptFlag=t.supports.everythingExceptFlag&&!t.supports.flag,t.DOMReady=!1,t.readyCallback=function(){t.DOMReady=!0},t.supports.everything||(n=function(){t.readyCallback()},a.addEventListener?(a.addEventListener("DOMContentLoaded",n,!1),e.addEventListener("load",n,!1)):(e.attachEvent("onload",n),a.attachEvent("onreadystatechange",function(){"complete"===a.readyState&&t.readyCallback()})),(r=t.source||{}).concatemoji?d(r.concatemoji):r.wpemoji&&r.twemoji&&(d(r.twemoji),d(r.wpemoji)))}(window,document,window._wpemojiSettings);
@@ -153,7 +153,7 @@ var dokan = {"ajaxurl":"https:\/\/themes.getbootstrap.com\/wp-admin\/admin-ajax.
       
       
         <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container"><a href="https://themes.getbootstrap.com" class="navbar-brand" href="/">Themebook</a>
+          <div class="container"><a href="https://themes.getbootstrap.com" class="navbar-brand" href="/">onelink</a>
             <div class="d-flex ml-auto">
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#globalNavbar" aria-controls="globalNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             </div>
